--- a/stringfog-gradle-plugin/build.gradle
+++ b/stringfog-gradle-plugin/build.gradle
@@ -5,8 +5,11 @@ dependencies {
     implementation gradleApi()
     implementation localGroovy()
     implementation 'com.android.tools.build:gradle:3.3.0'
-    implementation 'org.ow2.asm:asm-all:5.0.4'
+    implementation 'org.ow2.asm:asm:6.0'
     implementation 'com.squareup:javapoet:1.9.0'
+    implementation 'com.squareup:javawriter:2.5.0'
+    implementation 'com.google.guava:guava:18.0'
+    implementation 'commons-io:commons-io:2.4'
     implementation project(':stringfog-interface')
 }
 
