--- a/stringfog-gradle-plugin/build.gradle
+++ b/stringfog-gradle-plugin/build.gradle
@@ -40,4 +40,4 @@ version=VERSION
 //}
 
 //apply from: '../bintray_java.gradle'
-//apply from: '../nexus_java.gradle'
+apply from: '../nexus_java.gradle'
